# Redundra-Bench

./: .gitignore  BENCHMARK.md  Makefile  README.md  RESULTS.md  requirements.txt
benchmark/: manifest.yaml
benchmark/analysis/: analyze.py
benchmark/mcp/: _mcp_stdio.py  null_mcp.py  redundra_stub.py
benchmark/runner/: _common.py  codex_env.py  codex_usage.py  opencode_usage.py  openrouter.py  reuse_check.py  run_all.py  run_all_opencode.py  run_opencode.py  run_task.py  score.py  settings.py
benchmark/scripts/: author_tasks.py  gen_manifest.py  resume_codex_when_authed.sh  setup_fixture.py  task_specs.py  validate_gold.py
benchmark/tasks/ext-01-truncate-whole-words/: gold.patch  task.yaml  test.patch
benchmark/tasks/ext-02-safe-div-round/: gold.patch  task.yaml  test.patch
benchmark/tasks/neg-01-clip-charset/: gold.patch  task.yaml  test.patch
benchmark/tasks/neg-02-split-sections/: gold.patch  task.yaml  test.patch
benchmark/tasks/neg-03-shallow-override/: gold.patch  task.yaml  test.patch
benchmark/tasks/pos-01-url-path/: gold.patch  task.yaml  test.patch
benchmark/tasks/pos-02-batched-send/: gold.patch  task.yaml  test.patch
fixtures/redundra-utils/: README.md  pyproject.toml
fixtures/redundra-utils/src/redundra_utils/: __init__.py  collections_util.py  numeric.py  retrying.py  text.py  validation.py
fixtures/redundra-utils/tests/: test_collections_util.py  test_numeric.py  test_retrying.py  test_text.py  test_validation.py
results/: oc-lean-deepseek-v4pro.summary.json  phase0-codex-gpt5.5.summary.json
(+18 files in other folders)
